--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <h1>Justin Boyd Media</h1>
-    <p>This is the home page of the JBM</p>
+    <p>This is the home page of the JBM Tiki</p>
 
     <script src="app.js"></script> 
 </body>
