--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <h1>Justin Boyd Media</h1>
     <p>This is the home page of the JBM Tiki</p>
+    <p>This is in the experimental stage</p>
 
     <script src="app.js"></script> 
 </body>
